# tanssi-integration

./: Cargo.toml
.github/workflows/: coverage.yml  release.yml
ava-protocol-primitives/: Cargo.toml
ava-protocol-primitives/src/: assets.rs  lib.rs
container-chains/nodes/simple/: Cargo.toml
container-chains/nodes/simple/src/: chain_spec.rs
container-chains/runtime-templates/common/: Cargo.toml
container-chains/runtime-templates/common/src/: constants.rs  fees.rs  lib.rs
container-chains/runtime-templates/simple/: Cargo.toml
container-chains/runtime-templates/simple/src/: lib.rs  xcm_config.rs
container-chains/runtime-templates/simple/src/weights/: asset_registry_weights.rs  mod.rs
oak-primitives/: Cargo.toml
oak-primitives/src/: assets.rs  lib.rs
pallets/automation-price/: Cargo.toml
pallets/automation-price/src/: benchmarking.rs  fees.rs  lib.rs  mock.rs  tests.rs  trigger.rs  types.rs  weights.rs
pallets/automation-time/: Cargo.toml
pallets/automation-time/src/: benchmarking.rs  fees.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/valve/: Cargo.toml
pallets/valve/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/xcmp-handler/: Cargo.toml
pallets/xcmp-handler/src/: lib.rs  mock.rs  tests.rs
test/: moonwall.config.json
test/scripts/: build-spec-single-container.sh  download-polkadot.sh
test/suites/parathreads/: test_tanssi_parathreads.ts
