[package]
name = "ava-protocol-primitives"
authors = [ "Ava Protocol Team" ]
description = "Ava Protocol Runtime primitives"
edition = "2021"
homepage = "https://avaprotocol.org"
license = "GPL-3.0"
repository = "https://github.com/AvaProtocol/tanssi-integration"
version = "1.0.0"

[dependencies]
impl-trait-for-tuples = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

## Substrate FRAME Dependencies
frame-support = { workspace = true }

## Polkdadot deps
staging-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }

## ORML deps
orml-traits = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"orml-traits/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"staging-xcm-builder/std",
	"staging-xcm-executor/std",
	"staging-xcm/std",
]
