[package]
name = "oak-primitives"
version = "1.0.0"
description = "OAK Runtime primitives"
authors = ["OAK Developement Team"]
license = "GPL-3.0"
homepage = "https://oak.tech"
repository = 'https://github.com/OAK-Foundation/OAK-blockchain'
edition = "2021"

[dependencies]
impl-trait-for-tuples = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-std = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }

## Substrate FRAME Dependencies
frame-support = { workspace = true }

## Polkdadot deps
staging-xcm = { workspace = true }
staging-xcm-executor = { workspace = true }
staging-xcm-builder = { workspace = true }

## ORML deps
orml-traits = { workspace = true }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
  "staging-xcm-executor/std",
  "staging-xcm/std",
  "staging-xcm-builder/std",
]
