[package]
name = "pallet-automation-time"
description = "Pallet for scheduling and running tasks in the future."
version = "1.0.0"
edition = "2021"
authors = ["Ava Protocol Team"]
license = "GPL-3.0"
homepage = "https://avaprotocol.org"
repository = 'https://github.com/AvaProtocol/tanssi-integration'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
parity-scale-codec = { workspace = true , features = ["derive"], default-features = false }
scale-info = { workspace = true , features = ["derive",] }
log = { workspace = true }
hex = { workspace = true, features = ["alloc"] }

# Polkadot
polkadot-parachain-primitives = { workspace = true }
staging-xcm = { workspace = true }

# Cumulus dependencies
cumulus-pallet-xcm = { workspace = true }
cumulus-primitives-core = { workspace = true }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }

## Substrate FRAME Dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

## Substrate Pallet Dependencies
pallet-timestamp = { workspace = true }
pallet-balances = { workspace = true }

## Polkdadot deps
staging-xcm-builder = { workspace = true }

## ORML
orml-traits = { workspace = true }
orml-currencies = { workspace = true }

## Local
pallet-xcmp-handler = { workspace = true }
ava-protocol-primitives = { workspace = true }


[dev-dependencies]
rand = { workspace = true }
serde = { workspace = true }
sp-core = { workspace = true }

pallet-balances = { workspace = true }
pallet-xcm = { workspace = true }
staging-xcm-executor = { workspace = true }

# Cumulus dependencies
parachain-info = { workspace = true }

orml-currencies = { workspace = true }
orml-tokens = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
std = [
  "parity-scale-codec/std",
  "cumulus-pallet-xcm/std",
  "cumulus-primitives-core/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "orml-currencies/std",
  "orml-tokens/std",
  "orml-traits/std",
  "pallet-timestamp/std",
  "pallet-balances/std",
  "pallet-xcm/std",
  "pallet-xcmp-handler/std",
  "ava-protocol-primitives/std",
  "polkadot-parachain-primitives/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "staging-xcm/std",
  "staging-xcm-builder/std",
  "staging-xcm-executor/std",
  "parachain-info/std",
]
dev-queue = []
