[package]
name = "pallet-valve"
description = "Pallet for pausing different parts of the chain."
version = "0.2.0"
edition = "2021"
authors = ["Ava Protocol Team"]
homepage = "https://avaprotocol.org"
repository = 'https://github.com/AvaProtocol/OAK-blockchain'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"], default-features = false }
scale-info = { workspace = true, features = ["derive"] }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }


[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
std = [
  "parity-scale-codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
]
