[package]
name = "pallet-xcmp-handler"
description = "Pallet to handle XCMP intricacies."
version = "0.1.0"
edition = "2021"
authors = ["Ava Protocol Team"]
homepage = "https://avaprotocol.org"
repository = 'https://github.com/AvaProtocol/tanssi-integration'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }
serde = { workspace = true }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

## Substrate FRAME Dependencies
frame-benchmarking = { workspace = true, optional = true  }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Cumulus dependencies
cumulus-primitives-core = { workspace = true }


# Polkadot Dependencies
polkadot-parachain-primitives = { workspace = true }
staging-xcm = { workspace = true }
staging-xcm-executor = { workspace = true }

# ORML
orml-traits = { workspace = true }
orml-currencies = { workspace = true }
orml-tokens = { workspace = true }

[dev-dependencies]
# Substrate
pallet-balances = { workspace = true }
sp-core = { workspace = true }

# Cumulus dependencies
cumulus-pallet-xcm = { workspace = true }
parachain-info = { workspace = true }

# Polkadot Dependencies
polkadot-parachain-primitives = { workspace = true }
pallet-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }

ava-protocol-primitives = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "staging-xcm-builder/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "cumulus-primitives-core/runtime-benchmarks",
  "orml-tokens/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "polkadot-parachain-primitives/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "staging-xcm-executor/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "cumulus-pallet-xcm/try-runtime",
  "pallet-xcm/try-runtime",
  "orml-currencies/try-runtime",
  "orml-tokens/try-runtime",
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
  "sp-runtime/try-runtime",
  "parachain-info/try-runtime",
]
std = [
  "parity-scale-codec/std",
  "cumulus-primitives-core/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "orml-traits/std",
  "polkadot-parachain-primitives/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "staging-xcm/std",
  "staging-xcm-builder/std",
  "staging-xcm-executor/std",
  "orml-currencies/std",
  "orml-tokens/std",
  "ava-protocol-primitives/std",
  "pallet-xcm/std",
  "cumulus-pallet-xcm/std",
  "parachain-info/std",
  "pallet-balances/std",
  "sp-core/std",
  "sp-io/std",
  "log/std",
  "serde/std",
]

