[package]
name = "pallet-xcmp-handler"
authors = [ "Ava Protocol Team" ]
description = "Pallet to handle XCMP intricacies."
edition = "2021"
homepage = "https://avaprotocol.org"
repository = "https://github.com/AvaProtocol/tanssi-integration"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }
serde = { workspace = true }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

## Substrate FRAME Dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Cumulus dependencies
cumulus-primitives-core = { workspace = true }


# Polkadot Dependencies
polkadot-parachain-primitives = { workspace = true }
staging-xcm = { workspace = true }
staging-xcm-executor = { workspace = true }

# ORML
orml-currencies = { workspace = true }
orml-tokens = { workspace = true }
orml-traits = { workspace = true }

[dev-dependencies]
# Substrate
pallet-balances = { workspace = true }
sp-core = { workspace = true }

# Cumulus dependencies
cumulus-pallet-xcm = { workspace = true }
parachain-info = { workspace = true }

# Polkadot Dependencies
pallet-xcm = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }

ava-protocol-primitives = { workspace = true }

[features]
default = [ "std" ]
std = [
	"ava-protocol-primitives/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pallet-balances/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parity-scale-codec/std",
	"polkadot-parachain-primitives/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"staging-xcm-builder/std",
	"staging-xcm-executor/std",
	"staging-xcm/std",
]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"staging-xcm-builder/runtime-benchmarks",
	"staging-xcm-executor/runtime-benchmarks",
]
try-runtime = [
	"cumulus-pallet-xcm/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-currencies/try-runtime",
	"orml-tokens/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"sp-runtime/try-runtime",
]
