[package]
name = "common-runtime"
version = "0.1.0"
description = "The commonalities between runtimes"
authors = ["OAK Developement Team"]
license = "GPL-3.0"
homepage = "https://oak.tech"
repository = 'https://github.com/OAK-Foundation/OAK-blockchain'
edition = "2021"

[dependencies]
# Substrate Dependencies
## Substrate Primitive Dependencies
sp-std = { workspace = true }
sp-runtime = { workspace = true }

## Substrate FRAME Dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }

## Substrate Pallet Dependencies
pallet-balances = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-treasury = { workspace = true }

## Polkdadot deps
polkadot-primitives = { workspace = true }

## ORML
orml-traits = { workspace = true }
orml-tokens = { workspace = true }

# Local Dependencies
oak-primitives = { workspace = true }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "sp-runtime/std",
  "sp-std/std",
  "pallet-balances/std",
  "pallet-transaction-payment/std",
  "pallet-treasury/std",
  "polkadot-primitives/std",
  "oak-primitives/std",
  "orml-traits/std",
  "orml-tokens/std",
]
